[package]
name = "ioctiller"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"]}
toml = "0.9.0"
windows-strings = "0.4.2"

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]
